--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <title>Movies</title>
 </head>
 <body>
+
+  <form>
+    <input type="text" name="search" class="search" placeholder="Search Goes Here">
+    <input type="submit" class="submit" value="Search">
+  </form>
   
   <script src="app.js"></script>
 </body>
